[package]
name = "fjall"
description = "Log-structured, embeddable key-value storage engine"
license = "MIT OR Apache-2.0"
version = "3.0.1"
edition = "2021"
rust-version = "1.91.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/fjall"
homepage = "https://github.com/fjall-rs/fjall"
keywords = ["database", "key-value", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "fjall"
path = "src/lib.rs"

[[bin]]
name = "fjall"
path = "src/tool.rs"
required-features = ["tool"]

[features]
default = ["lz4"]
lz4 = ["lsm-tree/lz4", "dep:lz4_flex"]
bytes_1 = ["lsm-tree/bytes_1"]
metrics = ["lsm-tree/metrics"]
tool = ["dep:clap", "dep:shlex", "dep:winsplit", "dep:rustyline", "dep:parse-size", "dep:humansize",
        "dep:tracing", "dep:tracing-log", "dep:tracing-panic", "dep:tracing-subscriber",
        "dep:path-clean", "dep:typed-path", "dep:pretty-hex"]
__internal_whitebox = []

[dependencies]
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.0"
clap = { version = "4", features = ["derive"], optional = true }
humansize = { version = "2.1", optional = true }
lsm-tree = { version = "~3.0.1", default-features = false, features = [] }
log = "0.4.27"
parse-size = { version = "1.0", optional = true }
path-clean = { version = "1.0", optional = true }
pretty-hex = { version = "0.4", optional = true }
rustyline = { version = "15", optional = true }
shlex = { version = "1", optional = true }
tempfile = "3.20.0"
tracing = { version = "0.1", optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-panic = { version = "0.1.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"], optional = true }
typed-path = { version = "0.12.0", optional = true }
winsplit = { version = "0.1", optional = true }
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
lz4_flex = { version = "0.11.5", optional = true }
flume = { version = "0.12.0", default-features = false }

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5"

[dev-dependencies]
nanoid = "0.4.0"
test-log = "0.2.18"
rand = "0.9.2"

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
